# pytorch_heterogeneous_batching

./: README.md  pyproject.toml  pyrightconfig.json
torch_heterogeneous_batching/: __init__.py
torch_heterogeneous_batching/batch/: __init__.py  batch.py  indicator.py  internals.py  utils.py
torch_heterogeneous_batching/nn/: __init__.py  losses.py  sumformer.py  transformer.py
