[tool.poetry]
name = "torch-heterogeneous-batching"
version = "0.1.0"
description = "heterogeneous batching for sets and higher order tensors in pytorch based on pytorch_scatter"
authors = ["Tristan Brugère <67050900+tbrugere@users.noreply.github.com>"]
license = "Cecill-B"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
torch-scatter = "^2.1.2"
ml-lib = {git = "https://github.com/tbrugere/ml_lib", rev="devel"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
